forgejo/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: forgejo
  labels:
    app: forgejo
spec:
  ports:
  - port: 3000
    name: web
  clusterIP: None
  selector:
    app: forgejo
