forgejo/templates/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: forgejo
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: traefik-gateway
    namespace: traefik
  hostnames:
  - "git.queerintech.org"
  rules:
  - backendRefs:
    - group: ''
      kind: Service
      name: forgejo
      port: 3000
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
